Revision history for Datahub-Factory

{{$NEXT}}

    - Fixed: missing Log::Any::Adapter::Log4perl dependency.

1.71  2017-09-06 10:54:08 CEST

    - Fixed: Licensing via GPv3 on milla release.
    - Fixed: missing Moose::Role.

1.70  2017-09-05 14:03:04 CEST

    - Changed: improved milla / dzil release flow.
    - Added: missing dependencies for testing in cpanfile.
    - Added: first iteration for .travis.yml file.
    - Changed: Clean up use imports for all modules.
    - Changed: Moved dhconveyor executable from script/ to bin/ directory for Module::Build.
    - Changed: Use Module::Build instead of Module::Build::Tiny.
    - Changed: Removed non-used dependencies which should be resolved automatically.
    - Changed: Upgraded Catmandu 1.0602 to 1.0603.

1.6.1  2017-09-04 09:11:34 CEST

    - Fixed: faulty references to deprecated Datahub::Factory::PipelineConfig.

1.6  2017-08-29 17:00:28 CEST

    - Changed: condition property renamed to explicit condition_path.
    - Changed: id_path configuration now done in importer instead of fixer.
    - Changed: All validation of the pipeline consolidated in Pipeline module.
    - Changed: refactored the Condition module.
    - Changed: refactored the Pipeline module.
    - Changed: removed deprecated legacy CLI options from the Pipeline

1.5  2017-08-27 14:38:46 CEST

    - Updated: Catmandu dependency from 1.0304 to 1.0602.
    - fixed: uninitialized error on item_id.
    - fixed: missing add method in stock datahub module.
    - added: verbose output instead of relying on stock log output.
    - changed: refactored the transport command.
    - removed: deprecated cli options and validation.

1.4  2017-07-08 13:40:43 CEST
    - added: JSON importer per issue ##43
    - changed: moved fetching id from item before item is fixed.
    - added: JSON exporter.
    - Fixed #33: Datahub::Factory::Fixer::Condition breaks with too many file opens
    - changed: display counter number in debug information